fixed to list